--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         <p class="header-text">Hi, This is</p>
         <p class="name">Matt Gaby</p>
 
-        <a href="https://github.com/kiranpaultiwari/vcard/blob/main/Kiran%20Tiwari.vcf" target="_blank" class="button button-light">
+        <a href="https://github.com/kiranpaultiwari/vcard/blob/main/Kiran%20Tiwari.vcf" target="_download" class="button button-light">
             <span>Save Contact Details</span>
             <span class="arrow">›</span>
         </a>
