--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Renegade Insurance</title>
+    <title>XYZ Studio</title>
     
     <!-- Font Import -->
     <link href="https://fonts.googleapis.com/css2?family=Instrument+Sans:wght@400;600&display=swap" rel="stylesheet">
@@ -117,7 +117,7 @@
     <div class="container">
         <div class="logo">Renegade™</div>
         <p class="header-text">Hi, This is</p>
-        <p class="name">Matt Gaby</p>
+        <p class="name">Kiran Tiwari</p>
 
         <a href="Kiran_Tiwari.vcf" target="_blank" download="Kiran_Tiwari.vcf" class="button button-light">
             <span>Save Contact Details</span>
