--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 <body>
 
     <div class="container">
-        <div class="logo">Renegade™</div>
+        <div class="logo">XYZ</div>
         <p class="header-text">Hi, This is</p>
         <p class="name">Kiran Tiwari</p>
 
