--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             font-size: 24px;
             font-weight: 600;
             color: white;
-            text-align: left;
+            text-align: center;
             transform: scale(0.8);
         }
 
@@ -115,7 +115,7 @@
 <body>
 
     <div class="container">
-        <div class="logo"></div>
+        <div class="logo">XYZ Studio</div>
         <p class="header-text">Hi, This is</p>
         <p class="name">Kiran Tiwari</p>
 
