--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             color: white;
             text-align: center;
             transform: scale(0.8);
-            margin-bottom: 24px;
+            margin: 40px;
         }
 
         .header-text {
